2001-08-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* README.txt: corrected outdated notes. [Bug #455116] (kriehbel)

2001-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (tkTable.tcl.h): corrected target to sed \'s
	properly in the .tcl file.

	* library/tkTable.tcl: added the ability to select borders with
	button 1. (backe)  The user can turn off this ability by calling
	[set ::tk::table::Priv(borderB1) 0] in their code.  button 3 is
	still active for selecting borders as well.
	fixed a couple references to work on Mac/Tk. (steffen)

	* mac/mac_tkTable_prefix.h:
	* mac/mac_tkTable.r: corrected Mac build. (steffen)

	* doc/tkTable.html: regen'd
	* doc/tkTable.n: Clarified that any <row>,<col> index
	specification will always return a valid cell.  [Bug #450397]
	Corrected what 'units' scrolls. [Bug #448837]

	* mac/mac_tkTable.mcp: removed in favor of XML project file
	* mac/mac_tkTable.mcp.xml: XML CodeWarrior project file for the
	mac. (steffen)

2001-07-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.c (TableDestroy): freed cached values in destroy.

2001-06-30  Jeff Hobbs  <jeffh@ActiveState.com>

	2.7 RELEASE

	* generic/tkTable.h: added STREQ #def to replace strcmp(a,b) == 0
	* generic/tkTable.c:
	* generic/tkTableTag.c: made use of STREQ #define.
	Redid tag merging to make use of only one allocated tag.

	* doc/tkTable.html:
	* doc/tkTable.n: updated docs with feature change info

	* tests/tkTable.test: added more tests

	* generic/tkTableCmds.c (Table_ActivateCmd): made table refresh
	when moving the cursor in the active cell.

2001-06-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTableTag.c (Table_TagCmd): corrected patch for Patch
	#423332 that does prevent excess refresh in the simple case.

2001-06-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.c (TableConfigure): corrected possible crash
	during configure when switching array vars and changed name of